# llm-experiments

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
.continue/: config.json
.continue/types/core/: index.d.ts
.github/: FUNDING.yml
astro/: .gitignore  Dockerfile  README.md  docker-compose.override.yml  pyproject.toml
configs/.config/io.datasette.llm/: extra-openai-models.yaml  mistral_models.json
configs/.config/io.datasette.llm/templates/: cmd.yaml  py_to_c.yaml
notebooks/: .gitignore  Makefile  README.md  README.org  crewai.ipynb  litellm_config.yaml  llm_experiments.ipynb  poetry.toml  pyproject.toml  requirements.txt
notebooks/llamafile-0.7/share/doc/llamafile/: llamafile-imatrix.ps  llamafile-perplexity.ps  llamafile-quantize.ps  llamafile.ps  llava-quantize.ps  zipalign.ps
notebooks/src/notebooks/: __init__.py
ollama/: 10xProgrammer  10xProgrammer-Modelfile
scratch/: micrograd.ipynb  openai.ipynb
scripts/: summarize.sh
