[tool.poetry]
name = "llm-experiments"
version = "0.1.0"
description = "python sandbox for llm shenanigans"
authors = ["Rohit Nair <6954311+rnair98@users.noreply.github.com>"]
readme = "README.org"
package-mode=false

[tool.poetry.dependencies]
python = ">=3.11,<=3.12"
tiktoken = "^0.7.0"
instructor = "^1.3.2"
pydantic = "^2.7.3"
duckdb = "^1.0.0"
polars = "^0.20.31"
numpy = "^1.26.4"
seaborn = "^0.13.2"
openai = "^1.33.0"
typer = ">=0.3.0,<0.10.0"
ollama = "^0.2.1"
outlines = "^0.0.43"
sqlmodel = "^0.0.19"
groq = "^0.8.0"
exa-py = "^1.0.12"


[tool.poetry.group.dev.dependencies]
uv = "^0.2.9"
neovim = "^0.3.1"
pytest = "^8.2.2"
pytest-cov = {extras = ["all"], version = "^5.0.0"}
jupyter = "^1.0.0"
python-dotenv = "^1.0.1"
tenacity = "^8.3.0"
termcolor = "^2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
