[project]
name = "astro"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Rohit Nair", email = "6954311+rnair98@users.noreply.github.com" }
]
dependencies = [
    "apache-airflow>=2.8.4",
    "apache-airflow-providers-cncf-kubernetes>=8.0.1",
    "apache-airflow-providers-sftp>=4.9.0",
]
readme = "README.md"
requires-python = ">= 3.9,<3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.3.4",
    "pytest>=8.1.1",
    "pytest-mock>=3.14.0",
    "langchain>=0.1.13",
    "transformers>=4.39.2",
    "huggingface-hub>=0.22.2",
    "polars>=0.20.17",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/astro"]
